Fix tutorial header becoming too small

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -600,7 +600,7 @@ main{
         font-size: 2rem;
         text-align: center;
         margin: 3vw;
-       
+        min-width: 350px;
     }
 
     .tutorial__content{
